tests/rosetta/out/Smalltalk/arithmetic-numbers.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-numbers.st:112: parse error, expected '|' or identifier
